--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
+# Dependencies
 node_modules/
+frontend/node_modules/
+
+# Build outputs
 dist/
+frontend/dist/
+build/
+
+# Environment variables
 .env
 .env.local
+.env.production.local
+
+# Logs
+logs/
 *.log
-.DS_Store
-coverage/
-.nyc_output/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+
+# Misc
+.cache/
+*.tsbuildinfo
