--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "build:all": "npm install && npm run build && npm run build:frontend",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:frontend": "cd frontend && npm run dev",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "meme-coin",
